Version 0.8 (2016-06-02)

o Fixed problems for CRAN: NAMESPACE, Rd files
o Added more examples to Rd files

Version 0.7 (2013-09-06)
o Added reference line for type=='stres' plot
o Added Fertilizer data

Version 0.6 (2012-12-20)
o Added further documentation and examples

Version 0.5 (2012-12-19)
o Fixed documentation errors; now builds correctly
o First version released to CRAN

Version 0.4 (2012-03-18)
o Added more documentation examples, using Sake and Adopted data from heplots
o now Depends: heplots for example data

Version 0.3 (2012-02-13)
o Initial package version