@@ -6,8 +6,10 @@ Version: 0.8
 Date: 2016-06-02
 Author: Michael Friendly
 Maintainer: Michael Friendly <friendly@yorku.ca>
-Description: This package computes regression deletion diagnostics for multivariate linear models and provides some associated
-	diagnostic plots.
+Description: Computes regression deletion diagnostics for multivariate linear models and provides some associated
+	diagnostic plots.  The diagnostic measures include hat-values (leverages), generalized Cook's distance, and
+	generalized squared studentized residuals.  Several types of plots to detect influential observations are
+	provided.
 Depends: car, heplots
 Suggests:
 License: GPL-2
