@@ -1,6 +1,6 @@
 
-importFrom("car", "showLabels", "influencePlot")
-importFrom("heplots", "trans.colors")
+importFrom("car", "showLabels", "influencePlot", "infIndexPlot", "influenceIndexPlot")
+importFrom("heplots", "trans.colors", "Mahalanobis")
 importFrom("stats", "cooks.distance", "hatvalues", "influence")
 
 #exportPattern("^[[:alpha:]]+")
@@ -12,7 +12,8 @@ export(
   influencePlot.mlm,
   lrPlot,
   mpower,
-  tr
+  tr,
+  infIndexPlot.mlm
 )
 
 S3method(lrPlot, lm)
@@ -21,6 +22,7 @@ S3method(hatvalues, mlm)
 S3method(cooks.distance, mlm)
 S3method(influence, mlm)
 S3method(influencePlot, mlm)
+S3method(infIndexPlot, mlm)
 
 S3method(print, inflmlm)
 S3method(as.data.frame, inflmlm)
